# zephyr_driver_propyradio

./: README.md  west.yml
.github/workflows/: build.yml
app/: CMakeLists.txt  Kconfig  README.md  alice.conf  alice_debug.conf  bob.conf  debug.conf  eve.conf  prj.conf  sample.yaml
app/boards/: esp32_devkitc_wroom.overlay  nrf52dk_nrf52832.overlay  nucleo_f756zg.overlay
app/src/: main.c
boards/: nucleo_spi.overlay
ccapp/: README.md  prj.conf
ccapp/boards/: esp32_devkitc_wroom.overlay  nucleo_f756zg.overlay
ccapp/src/: main.c
drivers/: CMakeLists.txt  Kconfig
drivers/cc2500/: CMakeLists.txt  Kconfig  cc2500.c  cc2500_defines.h
drivers/nrf24l01/: CMakeLists.txt  Kconfig  nrf24l01.c  nrf24l01_defines.h
dts/bindings/nrf24/: nordic,nrf24l01.yaml
dts/bindings/propy_radio/: nordic,nrf24l01.yaml  ti,cc2500.yaml
include/app/drivers/: nrf24.h  nrf24l01.h  propy_radio.h
tests/driver/nrf24l01/: CMakeLists.txt  prj.conf  testcase.yaml
tests/driver/nrf24l01/src/: main.c
tests/lib/custom_lib/: testcase.yaml
